# uncg-phy-351-s25.github.io

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
admin/syllabus/: index.html
docs/: .pages  index.md  index_starter.md
docs/admin/: .pages  syllabus.md
docs/css/: custom.css
docs/recipes/: .pages  index.md
docs/recipes/core/: .pages  calc-interactively.md  calculation-recipes.md  function-recipes.md  get-do-submit.md  index.md  iteration-recipes.md  launch-calc-save.md  scripts.md  scripts.py  set-dict-recipes.md  tuple-list-recipes.md  user-input.md  user-input.py  workflow-recipes.md
docs/recipes/num1/: .pages  index.md
docs/recipes/num2/: index.md
docs/recipes/num3/: index.md
docs/recipes/scipy/: index.md
docs/recipes/visual/: index.md
docs/topics/: .pages  external.md  index.md
docs/topics/core/: operators.md  precedence.md
docs/topics/scipy/: numpy.md
docs/topics/setup/: .pages  beskar-account.md  github-account.md  index.md
docs/topics/tools/: github.md
index_starter/: index.html
javascripts/: shortcuts.js
recipes/: index.html
recipes/core/: index.html
recipes/core/calc-interactively/: index.html
recipes/core/calculation/: index.html
recipes/core/calculation-recipes/: index.html
recipes/core/collections/: index.html
recipes/core/combine-lists/: index.html
recipes/num1/: index.html
recipes/num2/: index.html
recipes/num3/: index.html
recipes/scipy/: index.html
recipes/visual/: index.html
search/: search_index.json
topics/: index.html
topics/setup/: index.html
(+161 files in other folders)
