[project]
name = "reference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "emoji>=2.14.0",
    "jupyterlab>=4.3.1",
    "mkdocs-awesome-pages-plugin>=2.9.3",
    "pymdown-extensions>=10.12",
    "python-markdown-math>=0.8",
]
